# revou-bank

./: README.md  Revou-Bank.json  Revou_bank (DB).json  app.py  conftest.py  main.py  pyproject.toml  test.py
auth/: login.py
config/: setting.py  testing.py
middleware/: auth.py
models/: account.py  transaction.py  user.py
models/sql/: create-table-revou-bank.sql  insert-data-revou-bank.sql  temp.sql
repo/: account.py  transaction.py  user.py
router/: account.py  auth.py  transaction.py  user.py
templates/: 404.html  base.html  deposit.html  index.html  login.html  register.html  withdraw.html
tests/: test_account.py  test_transaction.py  test_user.py
views/: account.py  auth.py  transaction.py  user.py
